--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ url: http://duyanghao.github.io/
 rss_url: /pages/atom.xml
 
 # gavatar头像及Favicon
-gavatar: /public/img/deer3.png
-favicon: /public/img/deer3.png
+gavatar: /public/img/github.jpg
+favicon: /public/img/github.jpg
 
 # google analytics 设置
 #ga:
