Update Template for Comment
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   email: 1294057873@qq.com
   #duoshuo: duyanghao
   link: http://duyanghao.github.io/
-  weibo: 
+  weibo: http://weibo.com/6049751054/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1
   github: http://github.com/duyanghao
   music: 
   linkedin: 
@@ -17,7 +17,7 @@ author:
 duoshuo: duyanghao
 
 # 站点信息
-title: 杜杨浩的博客
+title: 阿杜的博客
 description: My personal blog
 url: http://duyanghao.github.io/
 rss_url: /pages/atom.xml
