--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ paginate: 10
 # replace redcarpet to kramdown,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
 # document: http://jekyllrb.com/docs/configuration/#kramdown
-markdown: kramdown
-kramdown:
-  input: GFM        # use Github Flavored Markdown !important
+#markdown: kramdown
+#kramdown:
+#  input: GFM        # use Github Flavored Markdown !important
    
 
 
