--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ truncate: true
 # replace redcarpet to kramdown,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
 # document: http://jekyllrb.com/docs/configuration/#kramdown
-#markdown: kramdown
-#kramdown:
-#  input: GFM        # use Github Flavored Markdown !important
+markdown: kramdown
+kramdown:
+  input: GFM        # use Github Flavored Markdown !important
    
 
 
